[package]
name = "lumi2d"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", optional = true }
bitflags = "2.5.0"
enum_dispatch = "0.3.13"
gl = { version = "0.14.0", optional = true }
glfw = { version = "0.58.0", optional = true, features = ["raw-window-handle-v0-6"] }
glow = { version = "0.15.0", optional = true }
glutin = { version = "0.32.0", optional = true }
image = { version = "0.25.1", optional = true }
log = "0.4.21"
num-traits = "0.2.19"
raw-window-handle = "0.6.2"
skia-safe = { version = "0.78.2", optional = true, features = ["gpu", "svg", "textlayout"] }
smol_str = "0.2.2"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", optional = true }
wgpu = { version = "23.0.0", optional = true }
winit = { version = "0.30.4", optional = true, default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen", "x11"] }

[dev-dependencies]
simple_logger = "5.0.0"



[features]
default = ["b-winit", "r-skia", "skia-vulkan"]
# Backends, for interacting with the windowing system
b-glfw = ["dep:glfw"]
b-winit = ["dep:winit"]
# Renderers, for ...rendering
r-wgpu = ["dep:wgpu"]
r-skia = ["dep:skia-safe"]
# Skia rendering backends
skia-vulkan = ["dep:vulkano", "dep:ash", "skia-safe/vulkan", "glfw?/vulkan"]
skia-opengl = ["dep:glow", "skia-safe/gl"]
skia-d3d = []
skia-metal = []

image = ["dep:image"]

[profile.release]
lto = true
strip = true
