[package]
name = "lumi2d"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38", optional = true }
bitflags = "2.8"
crossbeam-channel = "0.5"
enum_dispatch = "0.3"
gl = { version = "0.14", optional = true }
glfw = { version = "0.59", optional = true, features = ["raw-window-handle-v0-6"] }
glow = { version = "0.16", optional = true }
glutin = { version = "0.32", optional = true }
image = { version = "0.25", optional = true }
log = "0.4"
num-traits = "0.2"
raw-window-handle = "0.6"
skia-safe = { version = "0.81", optional = true, features = ["gpu", "svg", "textlayout"] }
smol_str = "0.2"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
uuid = { version = "1.12", features = ["v4", "fast-rng"] }
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", optional = true }
wgpu = { version = "24", optional = true }
winit = { version = "0.30", optional = true, default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen", "x11"] }

[dev-dependencies]
simple_logger = "5"



[features]
default = ["b-winit", "r-skia", "skia-vulkan"]
# Backends, for interacting with the windowing system
b-glfw = ["dep:glfw"]
b-winit = ["dep:winit"]
# Renderers, for ...rendering
r-wgpu = ["dep:wgpu"]
r-skia = ["dep:skia-safe"]
# Skia rendering backends
skia-vulkan = ["dep:vulkano", "dep:ash", "skia-safe/vulkan", "glfw?/vulkan"]
skia-opengl = ["dep:glow", "skia-safe/gl"]
skia-d3d = []
skia-metal = []

image = ["dep:image"]

[profile.release]
lto = true
strip = true
